# orientation-uv-rppg

./: .env.example  .gitignore  LICENCE.md  README.md  environment.yaml  pyproject.toml  requirements.txt  setup_conda.sh  setup_uv.sh
configs/: default.yaml  detect.yaml  detect_mmpd.yaml  detect_pure.yaml  evaluate.yaml  format_mmpd.yaml  format_pure.yaml  process_mmpd_uv.yaml  process_pure.yaml  process_pure_bvp_rppgtoolbox.yaml  process_pure_uv.yaml  summary.yaml  test.yaml  train.yaml
configs/callbacks/: default.yaml  save_config_callback.yaml
configs/callbacks/checkpoints/: train_checkpoint.yaml  valid_checkpoint.yaml
configs/callbacks/device_statistics_monitor/: accel_monitor.yaml  full_monitor.yaml
configs/callbacks/early_stopping/: invalid_stopping.yaml  overfit_stopping.yaml
configs/callbacks/learning_rate_monitor/: learning_rate_monitor.yaml
configs/callbacks/model_summary/: rich_full.yaml  rich_short.yaml
configs/callbacks/progress_bar/: rich_progress_bar.yaml
configs/datamodule/: default.yaml  mmpd.yaml  pure.yaml  single.yaml
configs/datamodule/dataloaders/: default.yaml
configs/datamodule/dataset/: default.yaml  mmpd.yaml  mmpd_uv.yaml  pure.yaml  pure_rppg_toolbox.yaml  pure_uv.yaml
configs/hydra/: default.yaml
configs/hydra/callbacks/: mlflow.yaml  save_configuration.yaml
configs/hydra/job/: default.yaml
configs/hydra/launcher/: submitit.yaml
configs/hydra/logging/: default.yaml
configs/hydra/run/: default.yaml
configs/hydra/sweep/: default.yaml
configs/hydra/sweeper/: default.yaml  optuna.yaml
configs/loggers/: csv.yaml  mlflow_local.yaml  mlflow_remote.yaml  wandb.yaml
configs/model/: README.md  physnet.yaml  physnet_orientation.yaml  physnet_rppg_toolbox.yaml
configs/model/network/: physnet.yaml  physnet_orientation.yaml  physnet_rppg_toolbox.yaml
configs/model/process/: physnet.yaml  physnet_orientation.yaml  physnet_rppg_toolbox.yaml  physnet_uv.yaml
configs/paths/: default.yaml
configs/plugins/precision/: mixed.yaml
configs/profiler/: advanced.yaml  default.yaml  pass_through.yaml  pytorch.yaml  simple.yaml
configs/trainer/: auto_dev.yaml  cpu_dev.yaml  ddp_dev.yaml  dev_default.yaml  gpu_dev.yaml
configs/trainer/accelerators/: auto..yaml  cpu.yaml  ddp.yaml  ddp_spawn_test.yaml  ddp_test.yaml  gpu.yaml  mps.yaml
configs/trainer/schemes/: dev.yaml  overfit.yaml  overhead.yaml  (+2 more)
examples/: basic_usage.ipynb
notebooks/: analysis.ipynb
scripts/: build.sh  cross_validation.py  process.py  results.py  test.py  train.py
src/: __init__.py  test.py  train.py
src/datamodules/: __init__.py
src/metrics/: __init__.py  classification.py  regression.py  signal.py
src/models/: __init__.py  physnet.py
src/orientation_uv_rppg/: __init__.py  __version.py
src/utils/: __init__.py  accelerator.py  callbacks.py  checkpoints.py  environments.py  experiments.py  hydra.py  loggers.py  optimizers.py  plugins.py  profilers.py  schedulers.py  strategies.py  summaries.py  writers.py
tests/: test_configuration.py  test_imports.py
(+102 files in other folders)
